Fix adding a task to smart list

Fix adding a task to smart list if it is currently selected (add to default list in this case).

BUG:271441